[project]
urls = { repository = "https://github.com/m-bain/whisperX" }
authors = [{ name = "Max Bain" }]
name = "whispermlx"
version = "3.8.7rc1"
description = "Time-Accurate Automatic Speech Recognition using Whisper (MLX backend for Apple Silicon)."
readme = "README.md"
requires-python = ">=3.10, <3.14"
license = { text = "BSD-2-Clause" }

dependencies = [
    "mlx-whisper>=0.2.0",
    "nltk>=3.9.1",
    "numpy>=2.1.0",
    "omegaconf>=2.3.0",
    "pandas>=2.2.3",
    "huggingface-hub>=0.28.1",
    "scikit-learn>=1.7.0",
    # torch stays: alignment.py runs wav2vec2 (transformers) inference on
    # torch. VAD, ASR, and diarization are all MLX; only forced alignment
    # still touches torch.
    "torch>=2.6.0",
    "transformers>=4.48.0",
]


[project.optional-dependencies]
dev = ["pytest"]

[project.scripts]
whispermlx = "whisperx.__main__:cli"

[build-system]
requires = ["setuptools"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["whisperx*"]
