[project]
urls = { repository = "https://github.com/m-bain/whisperX" }
authors = [{ name = "Max Bain" }]
name = "whispermlx"
version = "3.8.7rc1"
description = "Time-Accurate Automatic Speech Recognition using Whisper (MLX backend for Apple Silicon)."
readme = "README.md"
requires-python = ">=3.10, <3.14"
license = { text = "BSD-2-Clause" }

dependencies = [
    "mlx-whisper>=0.2.0",
    "nltk>=3.9.1",
    "numpy>=2.1.0",
    "omegaconf>=2.3.0",
    "pandas>=2.2.3",
    "huggingface-hub>=0.28.1",
    "scikit-learn>=1.7.0",
    "torch>=2.6.0",
    "transformers>=4.48.0",
]


[project.optional-dependencies]
dev = [
    "mutmut>=3.6.0",
    "pyrefly>=1.1.1",
    "pytest>=9.0.2",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.22",
]

[project.scripts]
whispermlx = "whisperx.__main__:cli"

[build-system]
requires = ["setuptools"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["whisperx*"]

[dependency-groups]
dev = [
    "mutmut>=3.6.0",
    "pyrefly>=1.1.1",
    "pytest>=9.0.2",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.22",
]

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["whisperx", "tests"]
extend-exclude = ["whispermlx.egg-info", ".venv", "build", "dist"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # bugbear
    "C4",   # comprehensions
    "UP",   # pyupgrade
    "N",    # pep8-naming
    "SIM",  # simplify
    "RUF",  # ruff-specific
    "PIE",  # flake8-pie
    "RET",  # flake8-return
    "ARG",  # flake8-unused-arguments
    "PL",   # pylint
]
ignore = [
    "E501",   # line too long (formatter handles)
    "PLR0913", # too many args (whisper API is wide)
    "PLR2004", # magic values (fixture data)
    "B008",    # function call in default arg (torch/transformers pattern)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
    "ARG",
    "PLR2004",
    "S101",
    "PLC0415",
    "N806",
    "SIM117",
    "PLW1510",
    "RUF001",
    "RUF002",
    "RUF003",
]
"whisperx/alignment.py" = ["RUF001"]
"whisperx/asr.py" = ["RUF001"]
"whisperx/conjunctions.py" = ["RUF001", "RUF002"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pyrefly]
project_excludes = [
    "**/.venv/**",
    "**/build/**",
    "**/dist/**",
    "**/whispermlx.egg-info/**",
    "**/mutants/**",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--strict-markers --strict-config -m 'not e2e'"
filterwarnings = [
    "error",
    # wespeaker.compute_log_mel multiplies a zero power spectrum by the mel
    # filterbank; the NaN is replaced with eps right after via np.where, so the
    # warning is spurious. Suppress only this exact site.
    "ignore:divide by zero encountered in matmul:RuntimeWarning",
    "ignore:overflow encountered in matmul:RuntimeWarning",
    "ignore:invalid value encountered in matmul:RuntimeWarning",
]
markers = [
    "e2e: end-to-end tests that run the full whispermlx CLI on real audio (slow, downloads models)",
    "slow: integration tests that load real cached models (~seconds each, no network)",
]

[tool.coverage.run]
source = ["whisperx"]
branch = true
omit = [
    "whisperx/__main__.py",
    "whisperx/mlx_models/__init__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
fail_under = 90
show_missing = true
skip_covered = false

[tool.coverage.paths]
source = ["whisperx/"]

[tool.mutmut]
source_paths = ["whisperx"]
do_not_mutate = [
    "whisperx/__main__.py",
    "whisperx/mlx_models/__init__.py",
    # MLX model forward passes are thin Python wrappers around native MLX
    # ops. Mutating them produces segfaults from C++ array code, not Python
    # logic failures. Tested via integration tests against real model weights.
    "whisperx/mlx_models/silero_vad.py",
    "whisperx/mlx_models/pyannote_segmentation.py",
    "whisperx/mlx_models/wespeaker.py",
]
runner = "uv run pytest -q --no-cov -m 'not e2e and not slow'"
minimum_mutation_score = 80
